adding screenshot in README file

--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
         </div>
       </div>
       <div class="mt-4 mrg">
-        <div class="row pl-2 pr-2 d-flex">
+        <div class="row pl-2 pr-2 d-flex mr-0 ml-0">
 
-          <div class="col-12 col-md-4 ft-card-mx-width mrg">
+          <div class="col-12 col-md-4 col-lg-4 ft-card-mx-width mrg">
             <div class="card bck-transp mrg br-none d-flex flex-column">
               <div class="card-header text-uppercase font-weight-bold br-none">
                 <h4 class="text-center c-white">subscribe</h4> 
@@ -182,8 +182,8 @@
               </ul>
             </div>
           </div>
-          <div class="col-12 mt-3 col-md-4 ft-card-mx-width mrg">
-            <div class="card bck-transp mrg br-none">
+          <div class="col-12 mt-3 col-md-4 col-lg-4 ft-card-mx-width mrg">
+            <div class="card bck-transp br-none">
               <div class="card-header text-uppercase font-weight-bold br-none padding-zero">
                 <h4 class="text-center c-white">contact</h4> 
               </div>
@@ -196,7 +196,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-12 col-lg-4 mt-3 ft-card-mx-width mrg">
+          <div class="col-12 col-md-4 col-lg-4 mt-3 ft-card-mx-width mrg">
             <div class="card bck-transp mrg br-none">
               <div class="card-header text-uppercase font-weight-bold br-none padding-zero">
                 <h4 class="text-center c-white">about</h4> 
@@ -206,7 +206,7 @@
                     <p class="text-col text-center mb-0">
                       A house-rent searching portal was build to help tourist to find the most suitable houses for affordible price and high quality standard.We want our tourist have the best joyful and pleasent experience while staying in Turkey.</p>
                 </li>
-                <li class="list-group-item mrg bck-transp">
+                <li class="list-group-item bck-transp text-center">
                   <a href="#" class="text-danger">https://www.rent-house.tr.com</a></button></li>
               </ul>
             </div>
@@ -224,7 +224,7 @@
             <i class="fab fa-tumblr pr-2"></i>
           </div>
           
-          <div class="col-12 col-md-9 text-right d-flex flex-wrap">
+          <div class="col-12 col-md-9 text-right justify-content-end d-flex flex-wrap">
             <p class="cont-col smallest-font mb-0">COPYRIGHT © 2020 PATASHULE INC. ALL RIGHTS RESERVED. THIS PROJECT WAS BASED IN PATASHULE DESIGN MADE BY <span class="ft-text">MATHEW NJUGUNA </span> AND <span class="ft-text">SAM ACHOLA</span>.</p>
           </div>
 
