fixing linters errors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <main class="container-fluid pr-0 pl-0">
           <!--Four simple information-->       
-            <div row>
+            <div class="row">
               <div class="back-img bck-img-prop back-img-height pad-t">
                 <div class="container">
                   <div class="row">
@@ -45,7 +45,7 @@
                             <input class="form-control bor-rad-0 bck-clip-unset" type="text">
                             </div>
                             <div class="col-md-2 pr-md-0 pl-md-0">
-                            <a href="result-page.html"><button type="button" class="btn btn-secondary btn-lg btn-block bck-color search-btn-prop"> Search </button></a>
+                            <a href="result-page.html" class="btn btn-secondary btn-lg btn-block bck-color search-btn-prop">Search </a>
                             </div>
                             </div>                       
                           <div>
@@ -174,11 +174,11 @@
               </div>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item bck-transp br-none">
-                    <input type="email" class="form-control bor-rad-0 bck-transp bord-email text-col" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="you@example.com">
-                  </form>
+                    <input type="email" class="form-control bor-rad-0 bck-transp bord-email text-col" id="exampleInputEmail1" aria-describedby="exampleInputEmail1" placeholder="you@example.com">
+                  
                 </li>
-                <li class="list-group-item mrg bck-transp"><button type="submit" class="btn btn-primary bck-transp bord-email">
-                  <a href="#" class="c-white">Send</a></button></li>
+                <li class="list-group-item mrg bck-transp">
+                  <button type="submit" class="btn btn-primary bck-transp bord-email c-white">Send</button></li>
               </ul>
             </div>
           </div>
@@ -192,7 +192,7 @@
                     <p class="text-col text-center header-icons">Have a question or suggestion</p>
                 </li>
                 <li class="list-group-item mrg bck-transp">
-                  <a href="#" class="text-danger">info@rentHouse.com</a></button></li>
+                  <a href="#" class="text-danger">info@rentHouse.com</a></li>
               </ul>
             </div>
           </div>
@@ -207,7 +207,7 @@
                       A house-rent searching portal was build to help tourist to find the most suitable houses for affordible price and high quality standard.We want our tourist have the best joyful and pleasent experience while staying in Turkey.</p>
                 </li>
                 <li class="list-group-item bck-transp text-center">
-                  <a href="#" class="text-danger">https://www.rent-house.tr.com</a></button></li>
+                  <a href="#" class="text-danger">https://www.rent-house.tr.com</a></li>
               </ul>
             </div>
           </div>
