fixing screenshot in README file, fixing scroll bar problem, adjusting margins to  center elements

--- a/application-page.html
+++ b/application-page.html
@@ -38,19 +38,19 @@
 
                <div class="col-shadow mrg card-width d-flex flex-wrap justify-content-center">
                 <div class="col-12 col-md-6 col-md6 border m-md-2 bx-shadow card-border col-wdth pt-md-4">
-                  <p class="smaller-font pt-3">Location: Istanbul</p>
+                  <p class="smaller-font pt-3"><strong>Location:</strong> Istanbul</p>
                 </div>
                 <div class="col-12 col-md-6 col-md6 border m-2 bx-shadow card-border col-wdth pt-md-4">
-                  <p class="smaller-font pt-3">Available from: 18 December 2020</p>
+                  <p class="smaller-font pt-3"><strong>Available from:</strong>18 December 2020</p>
                 </div>
                 <div class="col-12 col-md-6 col-md6 border m-2 bx-shadow card-border col-wdth pt-md-4">
-                  <p class="smaller-font pt-3">Minimum stay: 1 month</p>
+                  <p class="smaller-font pt-3"><strong>Minimum stay:</strong> 1 month</p>
                 </div>
                 <div class="col-12 border col-md-6 col-md6 m-2 bx-shadow card-border col-wdth">
-                  <p class="smaller-font pt-3">The room includes a large bedroom with a queen-size bed and sitting area.</p>
+                  <p class="smaller-font pt-3"><strong>The room includes:</strong> a large bedroom with a queen-size bed and sitting area.</p>
                 </div>
                 <div class="col-12 border col-md-6 col-md6 m-2 bx-shadow card-border col-wdth">
-                  <p class="smaller-font pt-3">Fully equipped kitchen with the latest smart technology to make your cooking time fast and joyful. </p>
+                  <p class="smaller-font pt-3"><strong>Kitchen:</strong> fully equipped kitchen with the latest smart technology to make your cooking time fast and joyful. </p>
                 </div>  
               </div>
               <a href="#" class="pb-3 align-self-md-center text-center mt-3 btn btn-srch-cl c-white">Book Now</a>
@@ -104,8 +104,8 @@
 
           <div class="col-12 col-md-4 col-lg-4 ft-card-mx-width mrg">
             <div class="card bck-transp mrg br-none d-flex flex-column">
-              <div class="card-header text-uppercase font-weight-bold br-none">
-                <h4 class="text-center c-white">subscribe</h4> 
+              <div class="card-header text-uppercase font-weight-bold br-none bck-transp">
+                <h4 class="text-center c-white subscribe">subscribe</h4> 
               </div>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item bck-transp br-none">
@@ -119,7 +119,7 @@
           </div>
           <div class="col-12 mt-3 col-md-4 col-lg-4 ft-card-mx-width mrg">
             <div class="card bck-transp br-none">
-              <div class="card-header text-uppercase font-weight-bold br-none padding-zero">
+              <div class="card-header text-uppercase font-weight-bold br-none padding-zero bck-transp">
                 <h4 class="text-center c-white">contact</h4> 
               </div>
               <ul class="list-group list-group-flush">
@@ -133,7 +133,7 @@
           </div>
           <div class="col-12 col-md-4 col-lg-4 mt-3 ft-card-mx-width mrg">
             <div class="card bck-transp mrg br-none">
-              <div class="card-header text-uppercase font-weight-bold br-none padding-zero">
+              <div class="card-header text-uppercase font-weight-bold br-none padding-zero bck-transp">
                 <h4 class="text-center c-white">about</h4> 
               </div>
               <ul class="list-group list-group-flush">
