--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <main class="container-fluid pr-0 pl-0">
           <!--Four simple information-->       
-            <div class="row">
+            <div class="row mrg">
               <div class="back-img bck-img-prop back-img-height pad-t">
                 <div class="container">
                   <div class="row">
@@ -61,7 +61,7 @@
                 </div>             
               </div>
 
-            <div class="d-flex flex-column">
+            <div class="d-flex flex-column mrg">
                 <h3 class="text-center f-size p-4">The search portal for finding houses is working in four simple ways </h3>
               <div class="d-flex flex-wrap">
                 <div class="col-12 col-lg-6 mb-2 srch-inf-cont">
@@ -169,8 +169,8 @@
 
           <div class="col-12 col-md-4 col-lg-4 ft-card-mx-width mrg">
             <div class="card bck-transp mrg br-none d-flex flex-column">
-              <div class="card-header text-uppercase font-weight-bold br-none">
-                <h4 class="text-center c-white">subscribe</h4> 
+              <div class="card-header text-uppercase font-weight-bold br-none bck-transp">
+                <h4 class="text-center c-white subscribe">subscribe</h4> 
               </div>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item bck-transp br-none">
@@ -184,7 +184,7 @@
           </div>
           <div class="col-12 mt-3 col-md-4 col-lg-4 ft-card-mx-width mrg">
             <div class="card bck-transp br-none">
-              <div class="card-header text-uppercase font-weight-bold br-none padding-zero">
+              <div class="card-header text-uppercase font-weight-bold br-none padding-zero bck-transp">
                 <h4 class="text-center c-white">contact</h4> 
               </div>
               <ul class="list-group list-group-flush">
@@ -198,7 +198,7 @@
           </div>
           <div class="col-12 col-md-4 col-lg-4 mt-3 ft-card-mx-width mrg">
             <div class="card bck-transp mrg br-none">
-              <div class="card-header text-uppercase font-weight-bold br-none padding-zero">
+              <div class="card-header text-uppercase font-weight-bold br-none padding-zero bck-transp">
                 <h4 class="text-center c-white">about</h4> 
               </div>
               <ul class="list-group list-group-flush">
