--- a/result-page.html
+++ b/result-page.html
@@ -32,7 +32,7 @@
                 <div class="jumbotron jumbotron-fluid mt-3 w-100">
                     <div class="container-fluid max-wdth">
                       <p class="text-center p-3 icon-style-map display-4">Filter By City, District, And Price</p>
-                  <div class="d-flex flex-column flex-md-row ">
+                  <div class="d-flex flex-column flex-md-row flex-lg-row">
                         <!--City-->
                       <div class="col-12 col-md-3 result-pg">
                         <label for="city" class="ft-sz">
@@ -45,8 +45,8 @@
                         <label for="inputState-2" class="ft-sz">
                           District</label>
                         <select id="inputState-2"
-                         class="form-control bor-rad-0">
-                            <option selected>select district</option>
+                         class="form-control bor-rad-0 ft-text">
+                         <option selected>District</option>
                             <option>Sultanahmet</option>
                             <option>Taksim</option>
                             <option>Uskudar</option>
@@ -58,7 +58,7 @@
                         <label for="inputState-1" class="ft-sz">
                             Price Category</label>
                         <select id="inputState-1"
-                         class="form-control bor-rad-0">
+                         class="form-control bor-rad-0 ft-text">
                             <option selected>Price</option>
                             <option>Luxury</option>
                             <option>Mid-Range</option>
@@ -71,7 +71,7 @@
                         <label for="inputState" class="ft-sz">
                             Houses/Appartments</label>
                         <select id="inputState"
-                         class="form-control bor-rad-0">
+                         class="form-control bor-rad-0 ft-text">
                             <option selected>Houses</option>
                             <option>House-1</option>
                             <option>House-2</option>
@@ -81,8 +81,8 @@
                       </div>                                        
                       <!--Search-btn-->
                       <div class="d-flex btn-mg-top">
-                        <a href="application-page.html" class="btn btn-srch-cl btn-height smallest-font">Search</a>
-                        <button type="button" class="btn btn-srch-clear btn-height smallest-font p-0"><i class="fas fa-eraser"></i>Clear filter</button>
+                        <a href="application-page.html" class="btn btn-srch-cl btn-height smallest-font c-white bor-rad-0">Search</a>
+                        <button type="button" class="btn btn-srch-clear btn-height smallest-font p-0 bor-rad-0"><i class="fas fa-eraser"></i>Clear filter</button>
                     </div>
                   </div>
 
@@ -94,8 +94,8 @@
 
             <div class="row">
               <h4 class="text-center p-3 display-4 icon-style-map mrg">The Search Result Found 7 Rental-Houses</h4> 
-              <div class="d-flex flex-*-fill flex-wrap">
-                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pr-md-1 pr-lg-1 pl-lg-1">
+              <div class="d-flex flex-*-fill flex-wrap container-mrg-l">
+                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pr-md-1 pr-lg-1 pl-lg-1 mrg">
                     <div class="card">                      
                         <div class="card-body p-0">
                             <div class="bck-house-img">
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pl-md-1 pl-lg-1 pr-lg-1">
+                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pl-md-1 pl-lg-1 pr-lg-1 mrg">
                     <div class="card">                      
                         <div class="card-body p-0">
                             <div class="bck-house-img">
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pr-md-1 pl-lg-1 pr-lg-1">
+                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pr-md-1 pl-lg-1 pr-lg-1 mrg">
                     <div class="card">                      
                         <div class="card-body p-0">
                             <div class="bck-house-img">
@@ -172,7 +172,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pl-md-1 pl-lg-1 pr-lg-1">
+                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pl-md-1 pl-lg-1 pr-lg-1 mrg">
                     <div class="card">                      
                         <div class="card-body p-0">
                             <div class="bck-house-img">
@@ -197,7 +197,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pr-md-1 pr-lg-1 pl-lg-1">
+                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pr-md-1 pr-lg-1 pl-lg-1 mrg">
                     <div class="card">                      
                         <div class="card-body p-0">
                             <div class="bck-house-img">
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pl-md-1 pr-lg-1 pl-lg-1">
+                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pl-md-1 pr-lg-1 pl-lg-1 mrg">
                     <div class="card">                      
                         <div class="card-body p-0">
                             <div class="bck-house-img">
@@ -297,7 +297,7 @@
 
           <div class="col-12 col-md-4 col-lg-4 ft-card-mx-width mrg">
             <div class="card bck-transp mrg br-none d-flex flex-column">
-              <div class="card-header text-uppercase font-weight-bold br-none">
+              <div class="card-header text-uppercase font-weight-bold br-none bck-transp">
                 <h4 class="text-center c-white subscribe">subscribe</h4> 
               </div>
               <ul class="list-group list-group-flush">
@@ -312,7 +312,7 @@
           </div>
           <div class="col-12 mt-3 col-md-4 col-lg-4 ft-card-mx-width mrg">
             <div class="card bck-transp br-none">
-              <div class="card-header text-uppercase font-weight-bold br-none padding-zero">
+              <div class="card-header text-uppercase font-weight-bold br-none padding-zero bck-transp">
                 <h4 class="text-center c-white">contact</h4> 
               </div>
               <ul class="list-group list-group-flush">
@@ -326,7 +326,7 @@
           </div>
           <div class="col-12 col-md-4 col-lg-4 mt-3 ft-card-mx-width mrg">
             <div class="card bck-transp mrg br-none">
-              <div class="card-header text-uppercase font-weight-bold br-none padding-zero">
+              <div class="card-header text-uppercase font-weight-bold br-none padding-zero bck-transp">
                 <h4 class="text-center c-white">about</h4> 
               </div>
               <ul class="list-group list-group-flush">
