wrapping the form with <form> tag, making  the serach title  bigger using <h1> tag, centering book now button

--- a/result-page.html
+++ b/result-page.html
@@ -34,14 +34,14 @@
                       <p class="text-center p-3 icon-style-map display-4">Filter By City, District, And Price</p>
                   <div class="d-flex flex-column flex-md-row flex-lg-row">
                         <!--City-->
-                      <div class="col-12 col-md-3 result-pg">
+                      <form class="col-12 col-md-3 result-pg">
                         <label for="city" class="ft-sz">
                           City</label>
                         <input type="text" class="form-control bor-rad-0" id="city" placeholder="Istanbul">
-                      </div>
+                      </form>
 
                         <!--District-->
-                      <div class="col-12 col-md-3 result-pg">
+                      <form class="col-12 col-md-3 result-pg">
                         <label for="inputState-2" class="ft-sz">
                           District</label>
                         <select id="inputState-2"
@@ -52,9 +52,9 @@
                             <option>Uskudar</option>
                             <option>Fatih</option>
                         </select>
-                      </div>
+                      </form>
                         <!--Price-Category-->
-                      <div class="col-12 col-md-3 result-pg">
+                      <form class="col-12 col-md-3 result-pg">
                         <label for="inputState-1" class="ft-sz">
                             Price Category</label>
                         <select id="inputState-1"
@@ -65,9 +65,9 @@
                             <option>Budget</option>
                             <option>Cheep</option>
                         </select>
-                      </div>
+                      </form>
                         <!--Houses-->
-                      <div class="col-12 col-md-3 result-pg" id="houses">
+                      <form class="col-12 col-md-3 result-pg" id="houses">
                         <label for="inputState" class="ft-sz">
                             Houses/Appartments</label>
                         <select id="inputState"
@@ -78,11 +78,11 @@
                             <option>House-3</option>
                             <option>House-4</option>
                         </select>
-                      </div>                                        
+                      </form>                                        
                       <!--Search-btn-->
                       <div class="d-flex btn-mg-top">
                         <a href="application-page.html" class="btn btn-srch-cl btn-height smallest-font c-white bor-rad-0">Search</a>
-                        <button type="button" class="btn btn-srch-clear btn-height smallest-font p-0 bor-rad-0"><i class="fas fa-eraser"></i>Clear filter</button>
+                        <button type="button" class="btn btn-srch-clear btn-height smallest-font p-1 bor-rad-0"><i class="fas fa-eraser"></i>Clear filter</button>
                     </div>
                   </div>
 
@@ -247,7 +247,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pr-md-1 pr-lg-1 pl-lg-1">
+                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pr-md-1 pr-lg-1 pl-lg-1 mrg ml-md-0">
                     <div class="card">                      
                         <div class="card-body p-0">
                             <div class="bck-house-img">
@@ -352,8 +352,8 @@
             <i class="fab fa-tumblr pr-2"></i>
           </div>
           
-          <div class="col-12 col-md-9 text-right justify-content-end d-flex flex-wrap">
-            <p class="cont-col smallest-font mb-0">COPYRIGHT © 2020 PATASHULE INC. ALL RIGHTS RESERVED. THIS PROJECT WAS BASED IN PATASHULE DESIGN MADE BY <span class="ft-text">MATHEW NJUGUNA </span> AND <span class="ft-text">SAM ACHOLA</span>.</p>
+          <div class="col-12 col-md-9 justify-content-end d-flex flex-wrap">
+            <p class="cont-col smallest-font mb-0 text-sm-left text-md-right">COPYRIGHT © 2020 PATASHULE INC. ALL RIGHTS RESERVED. THIS PROJECT WAS BASED IN PATASHULE DESIGN MADE BY <span class="ft-text">MATHEW NJUGUNA </span> AND <span class="ft-text">SAM ACHOLA</span>.</p>
           </div>
 
         </div>
