adding live demo link and adding screenshot image to README file

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="container">
                   <div class="row">
                     <div class="col">
-                      <h1 class="c-white text-uppercase mrg-l">Search houses to rent in Turkey...</h1>
+                      <h1 class="c-white text-uppercase mrg-l fnt-size-mobsize">Search houses to rent in Turkey...</h1>
                       <div class="card card-bck-color search-bar">
                         <div class="card-body">
                           <h4 class="card-title ml-3 mb-md-1">Search by city</h4>
