adjusting height and width of the elements

--- a/result-page.html
+++ b/result-page.html
@@ -17,7 +17,7 @@
       <div class="row">         
           <div class="col d-flex justify-content-center  icon-style-map c-white justify-content-md-start">
               <a href="#" class="c-white"><i class="fa fa-map-marker pl-3" aria-hidden="true"></i></a>
-              <h3 class="mt-2 pl-1">HouseRentPortal</h3>
+              <h3 class="mt-2 pl-1"><a href="index.html" class="c-white text-decoration-none"><span class="header-a">HouseRentPortal</span></a></h3>
           </div>
           <div class="col d-flex justify-content-center justify-content-md-end p-2 header-icons gap mrg-top">
             <a href="#" class="c-white"><i class="fa fa-search" aria-hidden="true"></i></a>
@@ -103,19 +103,19 @@
                                 
                                 <ul class="list-group list-group-flush text-center line-h">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h6 class="c-white">
+                                        <h5 class="c-white">
                                           <a href="application-page.html" class="c-white text-decoration-none"> Location: Istanbul
-                                          </a></h6>
+                                          </a></h5>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h6></li>
+                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
                                 </ul>
                                 </div>
                             </div>
@@ -129,18 +129,18 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h6 class="c-white">Location: Istanbul
-                                        </h6>
+                                        <h5 class="c-white">Location: Istanbul
+                                        </h5>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h6></li>
+                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
                                   </ul>
                                 </div>
                             </div>
@@ -154,18 +154,18 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h6 class="c-white">Location: Istanbul
-                                        </h6>
+                                        <h5 class="c-white">Location: Istanbul
+                                        </h5>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h6></li>
+                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
                                   </ul>
                                 </div>
                             </div>
@@ -179,18 +179,18 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h6 class="c-white">Location: Istanbul
-                                        </h6>
+                                        <h5 class="c-white">Location: Istanbul
+                                        </h5>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h6></li>
+                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
                                   </ul>
                                 </div>
                             </div>
@@ -204,18 +204,18 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h6 class="c-white">Location: Istanbul
-                                        </h6>
+                                        <h5 class="c-white">Location: Istanbul
+                                        </h5>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h6></li>
+                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
                                   </ul>
                                 </div>
                             </div>
@@ -229,43 +229,43 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h6 class="c-white">Location: Istanbul
-                                        </h6>
+                                        <h5 class="c-white">Location: Istanbul
+                                        </h5>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h6></li>
+                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
                                   </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pr-md-1 pr-lg-1 pl-lg-1 mrg ml-md-0">
+                <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pr-md-1 pr-lg-1 pl-lg-1 mrg ml-md-1">
                     <div class="card">                      
                         <div class="card-body p-0">
                             <div class="bck-house-img">
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h6 class="c-white">Location: Istanbul
-                                        </h6>
+                                        <h5 class="c-white">Location: Istanbul
+                                        </h5>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h6></li>
+                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h5></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
+                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
                                   </ul>
                                 </div>
                             </div>
