--- a/application-page.html
+++ b/application-page.html
@@ -17,7 +17,7 @@
       <div class="row">         
           <div class="col d-flex justify-content-center  icon-style-map c-white justify-content-md-start">
               <a href="#" class="c-white"><i class="fa fa-map-marker pl-3" aria-hidden="true"></i></a>
-              <h3 class="mt-2 pl-1"><a href="index.html" class="c-white">HouseRentPortal</a></h3>
+              <h3 class="mt-2 pl-1"><a href="index.html" class="c-white text-decoration-none"><span class="header-a">HouseRentPortal</span></a></h3>
           </div>
           <div class="col d-flex justify-content-center justify-content-md-end p-2 header-icons gap mrg-top">
             <a href="#" class="c-white"><i class="fa fa-search" aria-hidden="true"></i></a>
