--- a/result-page.html
+++ b/result-page.html
@@ -81,7 +81,7 @@
                       </form>                                        
                       <!--Search-btn-->
                       <div class="d-flex btn-mg-top">
-                        <a href="application-page.html" class="btn btn-srch-cl btn-height smallest-font c-white bor-rad-0">Search</a>
+                        <a href="#" class="btn btn-srch-cl btn-height smallest-font c-white bor-rad-0">Search</a>
                         <button type="button" class="btn btn-srch-clear btn-height smallest-font p-1 bor-rad-0"><i class="fas fa-eraser"></i>Clear filter</button>
                     </div>
                   </div>
@@ -100,23 +100,22 @@
                         <div class="card-body p-0">
                             <div class="bck-house-img">
                                 <div class="p-2 pt-4">
-                                
-                                <ul class="list-group list-group-flush text-center line-h">
+                                  <ul class="list-group list-group-flush text-center line-h">
                                     <li class="list-group-item bck-transp br-none">
                                         <h5 class="c-white">
-                                          <a href="application-page.html" class="c-white text-decoration-none"> Location: Istanbul
+                                          <a href="application-page.html" class="c-white header-a"> Location: Istanbul
                                           </a></h5>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h5></li>
+                                    <h5 class="c-white"><a href="application-page.html" class="c-white header-a"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</a></h5></li>
                                     <li class="list-group-item bck-transp br-none">
                                     <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
                                     Available from: 18 Nov 2020</h5></li>
                                     <li class="list-group-item bck-transp br-none">
                                     <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
                                     Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
-                                </ul>
+                                  </ul>
                                 </div>
                             </div>
                         </div>
